--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,9 +7,8 @@
       <div class="flex-1 flex justify-center">
         <div class="relative">
           <div class="flex space-x-4">
-            <%= link_to 'On Sale', products_path(filter: 'on_sale'), class: "text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium" %>
+            <%= link_to 'On Sale', on_sale_products_path, class: "text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium" %>
             <%= link_to 'New Products', products_path(filter: 'new_products'), class: "text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium" %>
-            <%= link_to 'Recently Updated', products_path(filter: 'recently_updated'), class: "text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium" %>
             <div class="relative inline-block text-left">
               <button id="categoryButton" class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" aria-haspopup="true" aria-expanded="true">
                 Categories
