--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,4 +5,10 @@
   <p class="text-gray-700 mb-2">Price: <%= number_to_currency(@product.product_price) %></p>
   <p class="text-gray-600 mb-4"><%= @product.product_description %></p>
   <p class="text-sm text-gray-500">Stock: <%= @product.product_stock %></p>
+
+  <%= form_with(model: @cart_product, url: carts_products_path) do |form| %>
+  <%= form.hidden_field :product_id, value: @product.id %>
+  <%= form.number_field :cart_product_quantity, value: 1, min: 1 %>
+  <%= form.submit "Add to Cart" %>
+  <% end %>
 </div>
